--- a/member.html
+++ b/member.html
@@ -71,7 +71,7 @@
   <!-- Welcome Section -->
   <div class="welcome-note">
     <h2>Welcome to Doller Tree Family, <span id="userEmail"></span></h2>
-    <p>Thank you for your right decision, start your financial freedom journey from here now. Your sponsor will guide and help you. Be sure this project is forever with you. Believe in this wonderful system and go ahead. Wishing you success.</p>
+    <p>Thank you for your right decision, start your financial freedom journey from here now. Your sponsor will guide and help you. Be sure this project will be forever with you. Believe in this wonderful system and go ahead. Wishing you success.</p>
   </div>
 
   <!-- Referral Code Section -->
@@ -83,7 +83,7 @@
 
   <!-- Stats Section -->
   <div class="info-box">
-    <h3>Your Direct Team: <span id="directTeam">50</span></h3>
+    <h3>Your Direct: <span id="directTeam">50</span></h3>
     <h3>Total Team: <span id="totalTeam">200</span></h3>
     <h3>Total Income: $<span id="totalIncome">500</span></h3>
     <h3>Today's Income: $<span id="todayIncome">10</span></h3>
@@ -110,6 +110,12 @@
       <tr><td>Level 10</td><td>0</td></tr>
     </tbody>
   </table>
+
+  <!-- Buttons Section -->
+  <div class="button" onclick="location.href='profile.html'">Profile</div>
+  <div class="button" onclick="location.href='your_tree.html'">Your Tree</div>
+  <div class="button" onclick="location.href='statement.html'">Income Statement</div>
+  <div class="button" onclick="location.href='change_password.html'">Change Password</div>
 
   <script>
     // Set User Email dynamically (Example: Replace with actual user's email data)
