--- a/profile.html
+++ b/profile.html
@@ -36,9 +36,12 @@
         <p><strong>Wallet Address:</strong> <span id="wallet">Loading...</span></p>
     </div>
 
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
+    
+    <!-- Link to Profile JS -->
     <script src="./profile.js"></script>
 </body>
 </html>
