--- a/member.html
+++ b/member.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Doller Tree Family</title>
+  <title>Member Dashboard</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
       padding: 20px;
     }
     .welcome-note {
-      background-color: #4CAF50; /* Green background */
+      background-color: #4CAF50;
       padding: 20px;
       border-radius: 5px;
       margin-bottom: 20px;
@@ -39,21 +39,6 @@
       border-radius: 5px;
       margin: 5px;
       cursor: pointer;
-    }
-    .copy-btn {
-      background-color: #f44336;
-      color: white;
-      padding: 10px 20px;
-      cursor: pointer;
-    }
-    .button-blue {
-      background-color: #2196F3;
-    }
-    .button-red {
-      background-color: #f44336;
-    }
-    .button-grey {
-      background-color: #9E9E9E;
     }
     .button:hover {
       opacity: 0.9;
@@ -126,12 +111,12 @@
     </tbody>
   </table>
 
-  <!-- Buttons Section -->
+  <!-- Buttons Section (Updated) -->
   <div class="row-buttons">
     <div class="button" onclick="location.href='profile.html'">Profile</div>
     <div class="button" onclick="location.href='your_tree.html'">Your Tree</div>
     <div class="button" onclick="location.href='statement.html'">Income Statement</div>
-    <div class="button" onclick="location.href='change_password.html'">Change Password</div>
+    <!-- Removed Change Password button from here -->
     <div class="button button-blue" onclick="location.href='how_to_build_team.html'">How to Build Team</div>
   </div>
 
