--- a/profile.html
+++ b/profile.html
@@ -44,6 +44,8 @@
 <body>
     <div class="container">
         <h2>Profile Information</h2>
+        <!-- Display Name -->
+        <p><strong>Name:</strong> <span id="name">Loading...</span></p>
         <p><strong>Email:</strong> <span id="email">Loading...</span></p>
         <p><strong>Mobile Number:</strong> <span id="mobile">Loading...</span></p>
         <p><strong>Wallet Address:</strong> <span id="wallet">Loading...</span></p>
