--- a/profile.html
+++ b/profile.html
@@ -46,6 +46,13 @@
         <h2>Profile Information</h2>
         <!-- Display Name -->
         <p><strong>Name:</strong> <span id="name">Loading...</span></p>
+        
+        <!-- Display Date of Birth -->
+        <p><strong>Date of Birth:</strong> <span id="dob">Loading...</span></p>
+        
+        <!-- Display Gender -->
+        <p><strong>Gender:</strong> <span id="gender">Loading...</span></p>
+
         <p><strong>Email:</strong> <span id="email">Loading...</span></p>
         <p><strong>Mobile Number:</strong> <span id="mobile">Loading...</span></p>
         <p><strong>Wallet Address:</strong> <span id="wallet">Loading...</span></p>
