change-password.html

--- a/change-password.html
+++ b/change-password.html
@@ -45,6 +45,15 @@
         button:hover {
             background-color: #45a049;
         }
+        .eye-icon {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            cursor: pointer;
+        }
+        .input-container {
+            position: relative;
+        }
     </style>
 </head>
 <body>
@@ -52,13 +61,22 @@
         <h2>Change Password</h2>
         <form id="changePasswordForm">
             <label for="oldPassword">Old Password:</label>
-            <input type="password" id="oldPassword" name="oldPassword" required>
+            <div class="input-container">
+                <input type="password" id="oldPassword" name="oldPassword" required>
+                <span class="eye-icon" id="toggleOldPassword">&#128065;</span> <!-- Eye icon -->
+            </div>
 
             <label for="newPassword">New Password:</label>
-            <input type="password" id="newPassword" name="newPassword" required>
+            <div class="input-container">
+                <input type="password" id="newPassword" name="newPassword" required>
+                <span class="eye-icon" id="toggleNewPassword">&#128065;</span> <!-- Eye icon -->
+            </div>
 
             <label for="confirmNewPassword">Confirm New Password:</label>
-            <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+            <div class="input-container">
+                <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+                <span class="eye-icon" id="toggleConfirmNewPassword">&#128065;</span> <!-- Eye icon -->
+            </div>
 
             <button type="submit">Change Password</button>
         </form>
@@ -113,6 +131,27 @@
             }).catch((error) => {
                 alert('Error reauthenticating: ' + error.message);
             });
+        });
+
+        // Toggle password visibility for old password
+        document.getElementById('toggleOldPassword').addEventListener('click', function () {
+            const oldPasswordInput = document.getElementById('oldPassword');
+            const type = oldPasswordInput.type === 'password' ? 'text' : 'password';
+            oldPasswordInput.type = type;
+        });
+
+        // Toggle password visibility for new password
+        document.getElementById('toggleNewPassword').addEventListener('click', function () {
+            const newPasswordInput = document.getElementById('newPassword');
+            const type = newPasswordInput.type === 'password' ? 'text' : 'password';
+            newPasswordInput.type = type;
+        });
+
+        // Toggle password visibility for confirm new password
+        document.getElementById('toggleConfirmNewPassword').addEventListener('click', function () {
+            const confirmNewPasswordInput = document.getElementById('confirmNewPassword');
+            const type = confirmNewPasswordInput.type === 'password' ? 'text' : 'password';
+            confirmNewPasswordInput.type = type;
         });
     </script>
 </body>
