change-password.html

--- a/change-password.html
+++ b/change-password.html
@@ -26,12 +26,19 @@
             display: block;
             margin: 10px 0 5px;
         }
+        .input-container {
+            position: relative;
+        }
         input {
             width: 100%;
             padding: 8px;
             margin: 10px 0;
             border: 1px solid #ddd;
             border-radius: 4px;
+            outline: none;
+        }
+        input.error {
+            border: 2px solid red;
         }
         button {
             width: 100%;
@@ -48,11 +55,9 @@
         .eye-icon {
             position: absolute;
             right: 10px;
-            top: 10px;
+            top: 50%;
+            transform: translateY(-50%);
             cursor: pointer;
-        }
-        .input-container {
-            position: relative;
         }
     </style>
 </head>
@@ -106,15 +111,21 @@
         changePasswordForm.addEventListener('submit', (e) => {
             e.preventDefault();
 
-            const oldPassword = document.getElementById('oldPassword').value;
-            const newPassword = document.getElementById('newPassword').value;
-            const confirmNewPassword = document.getElementById('confirmNewPassword').value;
+            const newPassword = document.getElementById('newPassword');
+            const confirmNewPassword = document.getElementById('confirmNewPassword');
 
             // Check if new password and confirm password match
-            if (newPassword !== confirmNewPassword) {
+            if (newPassword.value !== confirmNewPassword.value) {
                 alert("New passwords do not match!");
+                newPassword.classList.add('error');
+                confirmNewPassword.classList.add('error');
                 return;
+            } else {
+                newPassword.classList.remove('error');
+                confirmNewPassword.classList.remove('error');
             }
+
+            const oldPassword = document.getElementById('oldPassword').value;
 
             // Reauthenticate the user
             const user = auth.currentUser;
@@ -122,7 +133,7 @@
 
             user.reauthenticateWithCredential(credential).then(() => {
                 // User reauthenticated, now change the password
-                user.updatePassword(newPassword).then(() => {
+                user.updatePassword(newPassword.value).then(() => {
                     alert('Password changed successfully!');
                     changePasswordForm.reset();
                 }).catch((error) => {
@@ -133,25 +144,29 @@
             });
         });
 
-        // Toggle password visibility for old password
-        document.getElementById('toggleOldPassword').addEventListener('click', function () {
-            const oldPasswordInput = document.getElementById('oldPassword');
-            const type = oldPasswordInput.type === 'password' ? 'text' : 'password';
-            oldPasswordInput.type = type;
+        // Toggle password visibility
+        function togglePasswordVisibility(inputId, iconId) {
+            const input = document.getElementById(inputId);
+            const icon = document.getElementById(iconId);
+            if (input.type === "password") {
+                input.type = "text";
+                icon.textContent = "🙈"; // Change to "Hide" icon
+            } else {
+                input.type = "password";
+                icon.textContent = "👁️"; // Change to "Show" icon
+            }
+        }
+
+        document.getElementById('toggleOldPassword').addEventListener('click', () => {
+            togglePasswordVisibility('oldPassword', 'toggleOldPassword');
         });
 
-        // Toggle password visibility for new password
-        document.getElementById('toggleNewPassword').addEventListener('click', function () {
-            const newPasswordInput = document.getElementById('newPassword');
-            const type = newPasswordInput.type === 'password' ? 'text' : 'password';
-            newPasswordInput.type = type;
+        document.getElementById('toggleNewPassword').addEventListener('click', () => {
+            togglePasswordVisibility('newPassword', 'toggleNewPassword');
         });
 
-        // Toggle password visibility for confirm new password
-        document.getElementById('toggleConfirmNewPassword').addEventListener('click', function () {
-            const confirmNewPasswordInput = document.getElementById('confirmNewPassword');
-            const type = confirmNewPasswordInput.type === 'password' ? 'text' : 'password';
-            confirmNewPasswordInput.type = type;
+        document.getElementById('toggleConfirmNewPassword').addEventListener('click', () => {
+            togglePasswordVisibility('confirmNewPassword', 'toggleConfirmNewPassword');
         });
     </script>
 </body>
