change-password.html

--- a/change-password.html
+++ b/change-password.html
@@ -35,10 +35,13 @@
             margin: 10px 0;
             border: 1px solid #ddd;
             border-radius: 4px;
-            outline: none;
         }
-        input.error {
-            border: 2px solid red;
+        .toggle-password {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
         }
         button {
             width: 100%;
@@ -52,12 +55,13 @@
         button:hover {
             background-color: #45a049;
         }
-        .eye-icon {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
+        .error {
+            color: red;
+            font-size: 14px;
+            margin-top: -8px;
+        }
+        .success {
+            color: green;
         }
     </style>
 </head>
@@ -68,21 +72,21 @@
             <label for="oldPassword">Old Password:</label>
             <div class="input-container">
                 <input type="password" id="oldPassword" name="oldPassword" required>
-                <span class="eye-icon" id="toggleOldPassword">&#128065;</span> <!-- Eye icon -->
+                <span class="toggle-password" onclick="togglePasswordVisibility('oldPassword')">👁️</span>
             </div>
 
             <label for="newPassword">New Password:</label>
             <div class="input-container">
                 <input type="password" id="newPassword" name="newPassword" required>
-                <span class="eye-icon" id="toggleNewPassword">&#128065;</span> <!-- Eye icon -->
+                <span class="toggle-password" onclick="togglePasswordVisibility('newPassword')">👁️</span>
             </div>
 
             <label for="confirmNewPassword">Confirm New Password:</label>
             <div class="input-container">
                 <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
-                <span class="eye-icon" id="toggleConfirmNewPassword">&#128065;</span> <!-- Eye icon -->
+                <span class="toggle-password" onclick="togglePasswordVisibility('confirmNewPassword')">👁️</span>
             </div>
-
+            <p id="errorMessage" class="error"></p>
             <button type="submit">Change Password</button>
         </form>
     </div>
@@ -93,80 +97,69 @@
     <script>
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyDCEBA8Dnd7pBs2rNKwxLETwObxBm9TYS4", 
-            authDomain: "doller-tree-4434d.firebaseapp.com", 
-            databaseURL: "https://doller-tree-4434d-default-rtdb.firebaseio.com", 
-            projectId: "doller-tree-4434d", 
-            storageBucket: "doller-tree-4434d.appspot.com", 
-            messagingSenderId: "308263906273", 
-            appId: "1:308263906273:web:060be293712c9a1fcf00a0"
+            apiKey: "YOUR_API_KEY", // Replace with your API Key
+            authDomain: "YOUR_AUTH_DOMAIN", // Replace with your Auth Domain
+            projectId: "YOUR_PROJECT_ID", // Replace with your Project ID
+            storageBucket: "YOUR_STORAGE_BUCKET", // Replace with your Storage Bucket
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID", // Replace with your Messaging Sender ID
+            appId: "YOUR_APP_ID" // Replace with your App ID
         };
 
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
+        // Toggle Password Visibility
+        function togglePasswordVisibility(inputId) {
+            const input = document.getElementById(inputId);
+            input.type = input.type === "password" ? "text" : "password";
+        }
+
         // Change Password Form handler
         const changePasswordForm = document.getElementById('changePasswordForm');
+        const errorMessage = document.getElementById('errorMessage');
+
         changePasswordForm.addEventListener('submit', (e) => {
             e.preventDefault();
 
-            const newPassword = document.getElementById('newPassword');
-            const confirmNewPassword = document.getElementById('confirmNewPassword');
+            const oldPassword = document.getElementById('oldPassword').value;
+            const newPassword = document.getElementById('newPassword').value;
+            const confirmNewPassword = document.getElementById('confirmNewPassword').value;
 
-            // Check if new password and confirm password match
-            if (newPassword.value !== confirmNewPassword.value) {
-                alert("New passwords do not match!");
-                newPassword.classList.add('error');
-                confirmNewPassword.classList.add('error');
+            // Validate passwords
+            if (newPassword !== confirmNewPassword) {
+                errorMessage.textContent = "New passwords do not match!";
+                document.getElementById('confirmNewPassword').style.borderColor = "red";
                 return;
             } else {
-                newPassword.classList.remove('error');
-                confirmNewPassword.classList.remove('error');
+                errorMessage.textContent = "";
+                document.getElementById('confirmNewPassword').style.borderColor = "";
             }
-
-            const oldPassword = document.getElementById('oldPassword').value;
 
             // Reauthenticate the user
             const user = auth.currentUser;
+            if (!user) {
+                errorMessage.textContent = "No user logged in!";
+                return;
+            }
+
             const credential = firebase.auth.EmailAuthProvider.credential(user.email, oldPassword);
 
-            user.reauthenticateWithCredential(credential).then(() => {
-                // User reauthenticated, now change the password
-                user.updatePassword(newPassword.value).then(() => {
-                    alert('Password changed successfully!');
-                    changePasswordForm.reset();
-                }).catch((error) => {
-                    alert('Error updating password: ' + error.message);
+            user.reauthenticateWithCredential(credential)
+                .then(() => {
+                    // User reauthenticated, now change the password
+                    user.updatePassword(newPassword)
+                        .then(() => {
+                            alert('Password changed successfully!');
+                            changePasswordForm.reset();
+                        })
+                        .catch((error) => {
+                            errorMessage.textContent = 'Error updating password: ' + error.message;
+                        });
+                })
+                .catch((error) => {
+                    errorMessage.textContent = 'Error reauthenticating: ' + error.message;
                 });
-            }).catch((error) => {
-                alert('Error reauthenticating: ' + error.message);
-            });
-        });
-
-        // Toggle password visibility
-        function togglePasswordVisibility(inputId, iconId) {
-            const input = document.getElementById(inputId);
-            const icon = document.getElementById(iconId);
-            if (input.type === "password") {
-                input.type = "text";
-                icon.textContent = "🙈"; // Change to "Hide" icon
-            } else {
-                input.type = "password";
-                icon.textContent = "👁️"; // Change to "Show" icon
-            }
-        }
-
-        document.getElementById('toggleOldPassword').addEventListener('click', () => {
-            togglePasswordVisibility('oldPassword', 'toggleOldPassword');
-        });
-
-        document.getElementById('toggleNewPassword').addEventListener('click', () => {
-            togglePasswordVisibility('newPassword', 'toggleNewPassword');
-        });
-
-        document.getElementById('toggleConfirmNewPassword').addEventListener('click', () => {
-            togglePasswordVisibility('confirmNewPassword', 'toggleConfirmNewPassword');
         });
     </script>
 </body>
