--- a/tree.html
+++ b/tree.html
@@ -24,18 +24,32 @@
         const app = firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
-        // Fetch users from Firebase
+        // Fetch users from Firebase and display in a tree-like structure
         function getUsers() {
             const usersRef = database.ref('users');
             usersRef.on('value', (snapshot) => {
                 const users = snapshot.val();
                 let output = "<ul>";
                 for (let userID in users) {
-                    output += `<li>User ID: ${userID}</li>`;
+                    output += buildUserTree(userID, users[userID].referrals, 0); // Building the tree recursively
                 }
                 output += "</ul>";
-                document.getElementById('userList').innerHTML = output;
+                document.getElementById('userTree').innerHTML = output;
             });
+        }
+
+        // Recursive function to build user tree
+        function buildUserTree(userID, referrals, level) {
+            let output = `<li style="margin-left:${level * 20}px; color:${referrals.length > 0 ? 'green' : 'yellow'};">User ID: ${userID}`;
+            if (referrals.length > 0) {
+                output += "<ul>";
+                referrals.forEach(referral => {
+                    output += buildUserTree(referral, users[referral] ? users[referral].referrals : [], level + 1);
+                });
+                output += "</ul>";
+            }
+            output += "</li>";
+            return output;
         }
 
         // Call function to load users on page load
@@ -52,9 +66,9 @@
     
     <main>
         <section>
-            <h2>Your Users</h2>
-            <div id="userList">
-                <!-- User list will be dynamically generated here from Firebase -->
+            <h2>Your Referral Tree</h2>
+            <div id="userTree">
+                <!-- User tree will be dynamically generated here from Firebase -->
             </div>
         </section>
     </main>
